# sentinel-brief

./: .env.example  .gitignore  .vercelignore  LICENSE  README.md  pyproject.toml  vercel.json
docker/: Dockerfile  docker-compose.yml
fixtures/: sample-brief-dryrun.md  sample-brief-live.md  sample-package.json  sample-requirements.txt
scripts/: daily.sh
src/sentinel/: __init__.py  cli.py  db.py  http.py
src/sentinel/api/: app.py
src/sentinel/brief/: __init__.py  bedrock.py  generator.py
src/sentinel/ingest/: ghsa.py  kev.py  osv.py
src/sentinel/match/: sbom.py  watchlist_ops.py
src/sentinel/models/: component.py  source.py  watchlist.py
src/sentinel_brief/: __init__.py  cli.py  config.py  http.py  logging.py
src/sentinel_brief/api/: app.py  schemas.py
src/sentinel_brief/brief/: prompts.py
src/sentinel_brief/ingest/: __init__.py  base.py  epss.py  nvd.py  osv_probe.py  runner.py
src/sentinel_brief/match/: __init__.py  matcher.py  scoring.py  version.py
src/sentinel_brief/models/: __init__.py  advisory.py  finding.py
tests/: test_e2e_offline.py  test_sbom.py  test_scoring.py  test_version.py
web/: next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/brief/[id]/: page.tsx
web/app/runs/: page.tsx
web/app/w/[slug]/: page.tsx
web/lib/: api.ts
