[project]
name = "sentinel-brief"
version = "0.1.0"
description = "Daily cyber-threat OSINT brief over an SBOM."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "packageurl-python>=0.15",
  "feedparser>=6.0",
  "tenacity>=9.0",
  "structlog>=24.4",
  "rich>=13.7",
  "boto3>=1.35",
  "python-dotenv>=1.0",
  "click>=8.1",
  "tomli>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6"]

[project.scripts]
sentinel = "sentinel_brief.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_brief"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
